Feat: Applied query params based filtering using single source of truth

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta charset="utf-8">
     <meta name="description" content="Van, Buy Van, Love Vans, New vans">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style"
-        href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&display=swap">
+    <link rel="preload" rel="stylesheet" as="style"
+        href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&display=swap"> -->
 </head>
 
 <body>
